--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Search history
+      Search History
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,31 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
+      <ion-title size="large">Search History</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <!-- Display weather search history grouped by date -->
+  <ion-list>
+    <ion-item-group *ngFor="let group of weatherHistory | groupByDate">
+      <ion-item-divider color="light"> 
+        {{ group.date | date: 'dd.MM.yyyy' }}
+      </ion-item-divider>
+      <ion-item-sliding *ngFor="let search of group.items" (ionSwipe)="deleteSearch(search)">
+        <ion-item>
+          <ion-label>
+            <h2>{{ search.city }}, {{ search.country }}</h2>
+            <h2>{{ search.temp }}</h2>
+            <p>{{ search.date | date: 'dd.MM.yyyy, HH:mm:ss' }}</p>
+          </ion-label>
+        </ion-item>
+
+        <ion-item-options side="end">
+          <ion-item-option color="danger">
+            Delete
+          </ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
+    </ion-item-group>
+  </ion-list>
 </ion-content>
