--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -9,9 +9,18 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
+      <ion-title size="large">Settings</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-list>
+    <ion-item>
+      <ion-label>Temperature Unit</ion-label>
+      <ion-select [(ngModel)]="selectedUnit" (ionChange)="onUnitChange()">
+        <ion-select-option value="celsius">Celsius (°C)</ion-select-option>
+        <ion-select-option value="fahrenheit">Fahrenheit (°F)</ion-select-option>
+        <ion-select-option value="kelvin">Kelvin (K)</ion-select-option>
+      </ion-select>
+    </ion-item>
+  </ion-list>
 </ion-content>
