--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -7,7 +7,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab2" href="/tabs/tab2">
-      <ion-icon aria-hidden="true" name="search-outline"></ion-icon>
+      <ion-icon aria-hidden="true" name="time-outline"></ion-icon>
       <ion-label>Search history</ion-label>
     </ion-tab-button>
 
