--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -6,14 +6,14 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" class="ion-padding">
+<ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large"><ion-icon aria-hidden="true" name="cog-outline"></ion-icon> Settings</ion-title>
+      <ion-title size="large">Settings</ion-title>
     </ion-toolbar>
   </ion-header>
+
   <ion-list>
-    <!-- Change temp unit -->
     <ion-item>
       <ion-label>Temperature Unit</ion-label>
       <ion-select [(ngModel)]="selectedUnit" (ionChange)="onUnitChange()">
@@ -22,10 +22,5 @@
         <ion-select-option value="kelvin">Kelvin (K)</ion-select-option>
       </ion-select>
     </ion-item>
-
-    <!-- Change theme -->
-    <ion-item>
-      <ion-toggle [(ngModel)]="paletteToggle" (ionChange)="toggleChange($event)" justify="space-between">Dark Mode</ion-toggle>
-  </ion-item>
   </ion-list>
 </ion-content>
